# project-hub

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  project_actions.rs  scanner.rs  storage.rs  types.rs  utils.rs
src/app/: brandRegistry.tsx  defaultStore.ts  demoData.ts  i18n.tsx  platform.ts  types.ts
src/components/: BrandMark.tsx  DashboardView.tsx  OnboardingView.tsx  ProjectCard.tsx  ProjectDetail.tsx  ProjectDetailModal.tsx  ProjectFormModal.tsx  ProjectTable.tsx  RootFoldersView.tsx  RootStructureReview.tsx  SettingsView.tsx  Sidebar.tsx  SplashScreen.tsx  TechnologyStack.tsx
src/hooks/: useProjectHub.ts
src/services/: desktopApi.ts
src/utils/: formatters.ts  paths.ts  projectFilters.ts
