[package]
name = "project-hub"
version = "0.1.0"
description = "Local developer project organizer built with Tauri"
authors = ["angozero"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.0"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
